# OpenFeatureStore

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-compose.yml  nginx.conf  ofs.example.yaml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/ofs-api-types/: Cargo.toml
crates/ofs-api-types/src/: code.rs  lib.rs  response.rs  validation.rs
crates/ofs-auth/: Cargo.toml
crates/ofs-auth/src/: authn.rs  lib.rs  middleware.rs  rbac.rs
crates/ofs-backfill/: Cargo.toml
crates/ofs-backfill/src/: engine.rs  lib.rs
crates/ofs-cache/: Cargo.toml
crates/ofs-cache/src/: cached_store.rs  l1.rs  l2.rs  lib.rs  traits.rs  warming.rs
crates/ofs-config/: Cargo.toml
crates/ofs-config/src/: config.rs  error.rs  lib.rs  source.rs
crates/ofs-core/: Cargo.toml
crates/ofs-core/src/: entity_key.rs  errors.rs  lib.rs  traits.rs  types.rs  utils.rs  value_type.rs
crates/ofs-lifecycle/: Cargo.toml
crates/ofs-lifecycle/src/: lib.rs  manager.rs
crates/ofs-materialization/: Cargo.toml
crates/ofs-materialization/src/: engine.rs  lib.rs
crates/ofs-observability/: Cargo.toml
crates/ofs-observability/src/: audit.rs  health.rs  lib.rs  metrics.rs  tracing.rs
crates/ofs-offline-store/: Cargo.toml
crates/ofs-offline-store/src/: duckdb_offline.rs  lib.rs
crates/ofs-online-store/: Cargo.toml
crates/ofs-online-store/src/: lib.rs  redis_online.rs  sqlite_online.rs
crates/ofs-proto/: Cargo.toml  build.rs
crates/ofs-proto/src/: lib.rs
crates/ofs-python/: Cargo.toml  pyproject.toml
crates/ofs-python/ofs/: __init__.py  cli.py  feature_store.py  features.py  mcp_server.py  stores.py
crates/ofs-python/src/: lib.rs  materialization.rs  offline_store.rs  online_store.rs  registry.rs  types.rs
crates/ofs-python/tests/: test_sdk.py
crates/ofs-registry/: Cargo.toml
crates/ofs-registry/src/: conversion.rs  lib.rs  pg_registry.rs  schema.rs  sql_registry.rs
crates/ofs-remote-store/: Cargo.toml
crates/ofs-remote-store/src/: backend.rs  cache.rs  error.rs  lib.rs  types.rs
crates/ofs-server/: Cargo.toml
crates/ofs-server/src/: main.rs
crates/ofs-serving/: Cargo.toml
crates/ofs-serving/src/: api_doc.rs  lib.rs  middleware.rs  server.rs
crates/ofs-serving/src/grpc/: mod.rs  serving.rs
crates/ofs-serving/src/rest/: features.rs  health.rs  mod.rs
crates/ofs-serving/tests/: integration_test.rs
crates/ofs-stream-ingest/: Cargo.toml
crates/ofs-stream-ingest/src/: dlq.rs  kafka.rs  lib.rs  push.rs  wal.rs
docs/: book.toml
docs/book/: 404.html  index.html  installation.html  print.html  quick_start.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/book/architecture/: data_flow.html  overview.html  storage.html
docs/book/cli/: commands.html  overview.html
docs/book/concepts/: data_sources.html  entities.html  entity_keys.html  feature_services.html  feature_views.html  value_types.html
docs/book/development/: building.html  contributing.html  testing.html
docs/book/mcp/: overview.html  protocol.html
docs/book/operations/: configuration.html  deployment.html  monitoring.html
docs/book/python/: examples.html  feature_store.html  getting_started.html  types.html
docs/book/rust/: ofs_core.html  ofs_materialization.html  ofs_offline_store.html  ofs_online_store.html  ofs_proto.html  ofs_registry.html  overview.html
docs/src/: SUMMARY.md  installation.md  introduction.md  quick_start.md
docs/src/architecture/: data_flow.md  overview.md  storage.md
docs/src/cli/: commands.md  overview.md
docs/src/concepts/: data_sources.md  entities.md  entity_keys.md  feature_services.md  feature_views.md  value_types.md
docs/src/development/: building.md  contributing.md  testing.md
docs/src/mcp/: overview.md  protocol.md
docs/src/operations/: configuration.md  deployment.md  monitoring.md
docs/src/python/: examples.md  feature_store.md  getting_started.md  types.md
docs/src/rust/: ofs_api_types.md  ofs_auth.md  ofs_backfill.md  ofs_cache.md  ofs_config.md  ofs_core.md  ofs_materialization.md  ofs_observability.md  ofs_offline_store.md  ofs_online_store.md  ofs_proto.md  ofs_registry.md  ofs_remote_store.md  ofs_serving.md  ofs_stream_ingest.md  overview.md
protos/feast/core/: Aggregation.proto  DataFormat.proto  DataSource.proto  Entity.proto  Feature.proto  FeatureService.proto  FeatureView.proto  FeatureViewProjection.proto  OnDemandFeatureView.proto  Registry.proto  StreamFeatureView.proto  Transformation.proto
protos/feast/serving/: ServingService.proto
protos/feast/types/: Value.proto
scripts/: bootstrap.sh  build-docs.sh  ensure-duckdb-symlink.sh
