[workspace]
resolver = "3"
members = [
    "crates/ofs-core",
    "crates/ofs-proto",
    "crates/ofs-registry",
    "crates/ofs-offline-store",
    "crates/ofs-online-store",
    "crates/ofs-materialization",
    "crates/ofs-python",
    "crates/ofs-config",
    "crates/ofs-api-types",
    "crates/ofs-observability",
    "crates/ofs-serving",
    "crates/ofs-remote-store",
    "crates/ofs-backfill",
    "crates/ofs-stream-ingest",
    "crates/ofs-cache",
    "crates/ofs-auth",
    "crates/ofs-lifecycle",
    "crates/ofs-server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "OpenFeatureStore - Offline+Online Feature Store with point-in-time correctness"

[workspace.dependencies]
pyo3 = { version = "0.26", features = ["abi3-py38", "anyhow", "multiple-pymethods"] }
pyo3-arrow = "0.17"
arrow = { version = "57", features = ["pyarrow"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
prost = "0.13"
prost-types = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "chrono"] }
duckdb = "1.105"
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
async-trait = "0.1"

# --- Phase 2: Serving API ---
axum = { version = "0.8", features = ["macros"] }
tonic = "0.12"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "compression-gzip", "trace", "request-id"] }
governor = "0.8"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
schemars = "0.8"
hyper = { version = "1", features = ["server", "http1", "http2"] }
http = "1"
http-body = "1"
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
pin-project = "1"

# --- Phase 3: Remote Store ---
object_store = { version = "0.11", features = ["aws", "gcp", "azure"] }
url = "2"

# --- Phase 6: Cache ---
moka = { version = "0.12", features = ["future"] }

# --- Phase 7: Auth ---
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# --- Phase 2: Observability ---
opentelemetry = "0.27"
opentelemetry-prometheus = "0.27"
opentelemetry_sdk = "0.27"
prometheus = "0.13"
tracing-opentelemetry = "0.28"
