[package]
name = "ofs-backfill"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Historical backfill engine for OpenFeatureStore (checkpoint/resume, parallelism)"

[dependencies]
ofs-core = { path = "../ofs-core" }
duckdb.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
futures-util.workspace = true
