[package]
name = "ofs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
ofs-proto = { path = "../ofs-proto" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
tracing.workspace = true
arrow.workspace = true
once_cell.workspace = true
prost.workspace = true
prost-types.workspace = true
async-trait.workspace = true
uuid.workspace = true
