[package]
name = "ofs-lifecycle"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Data lifecycle management for OpenFeatureStore — TTL-based cleanup"

[dependencies]
ofs-core = { path = "../ofs-core" }
ofs-config = { path = "../ofs-config" }

tokio.workspace = true
tracing.workspace = true
chrono.workspace = true
anyhow.workspace = true
async-trait.workspace = true
