[package]
name = "ofs-materialization"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Materialization engine for OpenFeatureStore (offline -> online)"

[dependencies]
ofs-core = { path = "../ofs-core" }
duckdb.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
tracing.workspace = true
anyhow.workspace = true
