[package]
name = "ofs-observability"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Prometheus metrics, structured tracing, health checks, and audit logging"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
chrono.workspace = true
