[package]
name = "ofs-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SQL-backed registry implementation for OpenFeatureStore"

[dependencies]
ofs-core = { path = "../ofs-core" }
ofs-proto = { path = "../ofs-proto" }
sqlx.workspace = true
tokio.workspace = true
async-trait.workspace = true
chrono.workspace = true
prost.workspace = true
prost-types.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde_json.workspace = true
