[package]
name = "ofs-stream-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Stream ingestion engine for OpenFeatureStore (Kafka consumer, HTTP push, WAL dedup, DLQ)"

[features]
default = []
kafka = ["rdkafka"]

[dependencies]
ofs-core = { path = "../ofs-core" }
ofs-config = { path = "../ofs-config" }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "chrono"] }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
hex = { workspace = true }

rdkafka = { version = "0.37", features = ["cmake-build"], optional = true }
